# Project-Zeta-Coding-Language

./: CMakeLists.txt  README.md
include/compile/: lexer.hpp
res/: test.ze
src/: main.c  main.cpp
src/compile/: compile.cpp  lexer.cpp
